# localdig

./: .gitignore  README.md  launcher.py  pyproject.toml  server.py  verifier.py
backend/: config.py  main.py  state.py
backend/routes/: benchmark.py  cache.py  infrastructure.py  records.py  stress.py
backend/services/: connections.py  dns.py  singles.py
backend/sockets/: benchmark.py  connections.py  lookup.py
benchmarking/: driver.py  recursor_caching.py  recursor_no_caching.py  utils.py
core/: launcher.py  recursor.py  server.py  verifier.py
db/: master.conf
dns_core/: cache.py  launcher.py  recursor.py  server.py  verifier.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  demo.js  index.css
frontend/src/components/: BenchmarkTab.jsx  DemoModal.jsx  StressTab.jsx
frontend/src/views/: Benchmark.jsx  Dashboard.jsx  Lookup.jsx  Records.jsx  Servers.jsx
